--- a/index.html
+++ b/index.html
@@ -7,29 +7,89 @@
 </head>
 
 <body>
-	<div id="header">
-		<header>
-      <img src =""/>
-			<h1>Dian Pan Blog</h1>
-  		</header>
-	</div>
 
-  <h1>Post Title</h1>
-  <h2>The subtitle, if you want it</h2>
-  <h4>Today's Date</h4>
+  <header>
+    <div id="header">
+    <table>
+    <tr>
+      <td> 
+        <img id="headshot" src ="http://i57.tinypic.com/301hlq9.png"/>
+      </td>
+
+      <td class="header-spacing"></td>
+
+      <td class="nav">
+        <a href="#" target="_none" class="link">
+          <span class="link-text">Blog</span></a>
+      </td>
+
+      <td class="header-spacing"></td>
+
+      <td class="nav">
+        <a href="#" target="_none" class="link">
+          <span class="link-text">Projects</span></a>
+      </td>
+
+      <td class="header-spacing"></td>
+
+      <td class="nav">
+        <a href="#" target="_none" class="link">
+          <span class="link-text">Contact</span></a>
+      </td>
+
+
+</table>
+</div>
+</header>
+	
+
 
   <section>
-    <p>
+    <h1>My DBC Blog</h1>
+    <p class="bio-text">
       A bit about me...
+      Lijit groupon ning stypi eskobo blyve ning shopify oooooc, meebo groupon prezi ebay voxy bitly diigo. Spock ifttt skype hipmunk movity whrrl bebo oooj empressr, disqus insala palantir bitly dropio zimbra zinch oooooc etsy, klout spock insala quora omgpop trulia jibjab. Sifteo dogster ebay grockit geni scribd bitly ning unigo, plickers voki mzinga tumblr kaboodle mozy whrrl woopra udemy, foodzie joukuu elgg twitter shopify akismet rovio. Kosmix eduvant woopra dopplr balihoo ning bebo akismet, boxbe vimeo kosmix shopify zappos bitly geni loopt, qeyno disqus sococo squidoo wikia octopart.
     </p>
-    <p>
+    <br><br>
+    
+    <p>Blog Post placeholder</p><br>
+        <img id="blog-image" src="http://placehold.it/250x250"/></p>
 
-    </p>
-    <p>
-
-    </p>
+      
+    <p>Blog Post placeholder</p>
+      <img id="blog-image" src="http://placehold.it/250x250"/></p>
 
   </section>
+
+  <footer>
+    <hr>
+    <br><br>
+
+    <tr>
+      <td class="footer">
+        <a class="footer-link" href="https://github.com/dianpan/" target="_none">
+          <span class="footer">Github</span></a>
+      </td>
+
+      <td class="header-spacing"></td>
+
+      <td class="footer">
+        <a class="footer-link" href="https:///www.twitter.com/lookgoodandwin" target="_none">
+          <span class="footer">Twitter</span></a>
+      </td>
+
+      <td class="header-spacing"></td>
+
+      <td class="footer">
+        <a class="footer-link" href="https://www.linkedin.com/in/dianpan" target="_none">
+          <span class="footer">LinkedIn</span></a>
+      </td>
+    </tr>
+
+
+
+  </footer>
+
 
 </body>
 
