edit index and css

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
 <body>
 
-  <header>
-    <div id="header">
+<header>
     <table>
     <tr>
       <td> 
@@ -33,13 +32,25 @@
       <td class="header-spacing"></td>
 
       <td class="nav">
-        <a href="#" target="_none" class="link">
+        <a href="mailto:dian.di.pan@gmail.com" target="_none" class="link">
           <span class="link-text">Contact</span></a>
       </td>
+  
 
 
-</table>
-</div>
+
+    <td class="nav">
+      <div id="social-header">
+        <a class="footer-img" href="https://github.com/dianpan/" target="_none"><img class="footer-img" src="http://pixabay.com/static/uploads/photo/2013/07/12/19/25/github-154769_640.png"/></a>
+        <a class="footer-img" href="https:///www.twitter.com/lookgoodandwin" target="_none"><img class="footer-img" src="http://i58.tinypic.com/mrwuww.png"/></a>
+        <a class="footer-img" href="https://www.linkedin.com/in/dianpan" target="_none"><img class="footer-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
+        <a class="footer-img" href="mailto:dian.di.pan@gmail.com" target="_none"><img class="footer-img" src="http://i58.tinypic.com/3ugip.png"/></a>
+      </div>
+    </td>
+  </tr>
+
+      </table>
+
 </header>
 	
 
@@ -64,30 +75,23 @@
   <footer>
     <hr>
     <br><br>
+    
+    <div id="social-footer">
+        <a class="footer-img" href="https://github.com/dianpan/" target="_none"><img class="footer-img" src="http://pixabay.com/static/uploads/photo/2013/07/12/19/25/github-154769_640.png"/></a>
+        <a class="footer-img" href="https:///www.twitter.com/lookgoodandwin" target="_none"><img class="footer-img" src="http://i58.tinypic.com/mrwuww.png"/></a>
+        <a class="footer-img" href="https://www.linkedin.com/in/dianpan" target="_none"><img class="footer-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
+        <a class="footer-img" href="mailto:dian.di.pan@gmail.com" target="_none"><img class="footer-img" src="http://i58.tinypic.com/3ugip.png"/></a>
 
-    <tr>
-      <td class="footer">
-        <a class="footer-link" href="https://github.com/dianpan/" target="_none">
-          <span class="footer">Github</span></a>
-      </td>
+      </div><br>
 
-      <td class="header-spacing"></td>
+      <p id="copyright">Copyright 2015</p>
 
-      <td class="footer">
-        <a class="footer-link" href="https:///www.twitter.com/lookgoodandwin" target="_none">
-          <span class="footer">Twitter</span></a>
-      </td>
-
-      <td class="header-spacing"></td>
-
-      <td class="footer">
-        <a class="footer-link" href="https://www.linkedin.com/in/dianpan" target="_none">
-          <span class="footer">LinkedIn</span></a>
-      </td>
-    </tr>
-
-
-
+<!--email: http://i58.tinypic.com/3ugip.png
+linkedin: http://i62.tinypic.com/j8pd0l.png
+twitter: http://i58.tinypic.com/mrwuww.png
+fb: http://i60.tinypic.com/2h88t1d.png
+instagram: http://i59.tinypic.com/mmv4hs.png
+-->      
   </footer>
 
 
