--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
       <td class="header-spacing"></td>
 
       <td class="nav">
-        <a href="#" target="_none" class="link">
+        <a href="dianpan.github.io/#index" target="_none" class="link">
+          <span class="link-text">Home</span></a>
+      </td>
+
+      <td class="header-spacing"></td>
+
+      <td class="nav">
+        <a href="dianpan.github.io/#blog" target="_none" class="link">
           <span class="link-text">Blog</span></a>
       </td>
 
