add blog index page

--- a/blog:index.html
+++ b/blog:index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <head>
-  <title>DBC Technical Blog</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="../default.css">
+  <link rel="stylesheet" type="text/css" href="default.css">
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <title>My DBC Blog</title>
+
 </head>
 
+<body>
 
 <header>
     <table>
@@ -57,29 +60,18 @@
 
 
 
-<main>
-  <h1>Week 2: a closer look at CSS </h1>
-  <h2>Phase 0, week 2</h2>
-  <h4>5/31/15</h4>
-
   <section>
-
-<p> A few topics to go over:<br>
-  What is the difference between Margin, Border, and Padding?
-What are the best practices associated with using classes vs. ids?
-What are the differences between relative, absolute, and fixed positioning?
-What does it mean to display inline vs inline blocks?
-
-
-    This week we dove into HTML and CSS.  I have a lot of experience with HTML from my day job as an email marketer.  Email is unfortunately very archaic, meaning it will only accept HTML and in-line CSS.
-
-  </p>
-  <p>
-  </p>
+    <h1>May 2015</h1>
+    <p class="bio-text">
+      <a href=""></a>
+      <a href=""></a>
+    </p>
+    <br><br>
   </section>
-</main>
 
-<footer>
+
+
+  <footer>
     <hr>
     <br><br>
 
@@ -95,3 +87,7 @@ What does it mean to display inline vs inline blocks?
 
       <p id="copyright">Copyright 2015</p>
   </footer>
+
+
+</body>
+
