--- a/blog:index.html
+++ b/blog:index.html
@@ -9,84 +9,20 @@
 
 <body>
 
-<header>
-    <table>
-    <tr>
-      <td>
-        <img id="headshot" src ="http://i57.tinypic.com/301hlq9.png"/>
-      </td>
-
-      <td class="header-spacing"></td>
-
-      <td class="nav">
-        <a href="dianpan.github.io/#index" target="_none" class="link">
-          <span class="link-text">Home</span></a>
-      </td>
-
-      <td class="header-spacing"></td>
-
-      <td class="nav">
-        <a href="dianpan.github.io/#blog" target="_none" class="link">
-          <span class="link-text">Blog</span></a>
-      </td>
-
-      <td class="header-spacing"></td>
-
-      <td class="nav">
-        <a href="#" target="_none" class="link">
-          <span class="link-text">Projects</span></a>
-      </td>
-
-      <td class="header-spacing"></td>
-
-      <td class="nav">
-        <a href="mailto:dian.di.pan@gmail.com" target="_none" class="link">
-          <span class="link-text">Contact</span></a>
-      </td>
-
-    <td class="nav">
-      <div id="social-header">
-        <a class="footer-img" href="https://github.com/dianpan/" target="_none"><img class="footer-img" src="http://i62.tinypic.com/be82o5.png"/></a>
-        <a class="footer-img" href="https:///www.twitter.com/lookgoodandwin" target="_none"><img class="footer-img" src="http://i58.tinypic.com/mrwuww.png"/></a>
-        <a class="footer-img" href="https://www.linkedin.com/in/dianpan" target="_none"><img class="footer-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
-        <a class="footer-img" href="mailto:dian.di.pan@gmail.com" target="_none"><img class="footer-img" src="http://i58.tinypic.com/3ugip.png"/></a>
-      </div>
-    </td>
-  </tr>
-
-      </table>
-
-</header>
-
+<object type="text/html" data="menu.html"></object>
 
 
   <section>
     <h1>May 2015</h1>
-    <p class="bio-text">
-      <a href=""></a>
-      <a href=""></a>
+    <p class="text">
+      <a href="">restaurant vs chef mindset</a><br>
+      <a href="">git, Github and the command line</a>
     </p>
-    <br><br>
+
   </section>
 
 
 
-  <footer>
-    <hr>
-    <br><br>
-
-    <div id="social-footer">
-
-        <a class="footer-img" href="https://github.com/dianpan/" target="_none"><img class="footer-img" src="http://i62.tinypic.com/be82o5.png"/></a>
-
-        <a class="footer-img" href="https:///www.twitter.com/lookgoodandwin" target="_none"><img class="footer-img" src="http://i58.tinypic.com/mrwuww.png"/></a>
-        <a class="footer-img" href="https://www.linkedin.com/in/dianpan" target="_none"><img class="footer-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
-        <a class="footer-img" href="mailto:dian.di.pan@gmail.com" target="_none"><img class="footer-img" src="http://i58.tinypic.com/3ugip.png"/></a>
-
-      </div><br>
-
-      <p id="copyright">Copyright 2015</p>
-  </footer>
 
 
 </body>
