--- a/blog:index.html
+++ b/blog:index.html
@@ -7,23 +7,23 @@
 
 </head>
 
+<header>
+  <object type="text/html" data="menu.html"></object>
+</header>
+
 <body>
-
-<object type="text/html" data="menu.html"></object>
-
-
   <section>
     <h1>May 2015</h1>
     <p class="text">
-      <a href="">restaurant vs chef mindset</a><br>
-      <a href="">git, Github and the command line</a>
+      <a href="dianpan.github.io/blog/t2-css-design.html">a deeper look into CSS</a><br>
+      <a href="dianpan.github.io/blog/c1-chefs-kitchen.html">restaurant vs chef mindset</a><br>
+      <a href="dianpan.github.io/blog/t1-git-blog.html">git, Github and the command line</a>
     </p>
 
   </section>
-
-
-
-
-
 </body>
+
+  <footer>
+    <object type="text/html" data="menu.html"></object>
+  </footer>
 
