--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <td class="header-spacing"></td>
 
       <td class="nav">
-        <a href="dianpan.github.io/#blog" target="_none" class="link">
+        <a href="dianpan.github.io/blog:index.html" target="_none" class="link">
           <span class="link-text">Blog</span></a>
       </td>
 
