edit blog links

--- a/index.html
+++ b/index.html
@@ -19,14 +19,15 @@
       <td class="header-spacing"></td>
 
       <td class="nav">
-        <a href="dianpan.github.io/#index" target="_none" class="link">
+        <a href="http://dianpan.github.io/#" target="_none" class="link">
           <span class="link-text">Home</span></a>
       </td>
+
 
       <td class="header-spacing"></td>
 
       <td class="nav">
-        <a href="dianpan.github.io/blog:index.html" target="_none" class="link">
+        <a href="http://dianpan.github.io/blog:index.html" target="_none" class="link">
           <span class="link-text">Blog</span></a>
       </td>
 
