--- a/blog:index.html
+++ b/blog:index.html
@@ -5,25 +5,40 @@
   <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   <title>My DBC Blog</title>
 
-</head>
 
-<header>
-  <object type="text/html" data="menu.html"></object>
-</header>
+</head>
 
 <body>
   <section>
-    <h1>May 2015</h1>
+    <h1 id="h1" class="headline-text">My Blogs</h1>
+    <h2 class="headline-text">May 2015</h2>
     <p class="text">
-      <a href="dianpan.github.io/blog/t2-css-design.html">a deeper look into CSS</a><br>
-      <a href="dianpan.github.io/blog/c1-chefs-kitchen.html">restaurant vs chef mindset</a><br>
-      <a href="dianpan.github.io/blog/t1-git-blog.html">git, Github and the command line</a>
+      <a href="http://dianpan.github.io/blog/t2-css-design.html">a deeper look into CSS</a><br>
+      <a href="http://dianpan.github.io/blog/c1-chefs-kitchen.html">restaurant vs chef mindset</a><br>
+      <a href="http://dianpan.github.io/blog/t1-git-blog.html">git, Github and the command line</a>
     </p>
 
   </section>
-</body>
+    </body>
 
-  <footer>
-    <object type="text/html" data="menu.html"></object>
+
+<footer>
+    <hr>
+    <br><br>
+
+    <div id="social-footer">
+
+        <a class="footer-img" href="https://github.com/dianpan/" target="_none"><img class="footer-img" src="http://i62.tinypic.com/be82o5.png"/></a>
+
+        <a class="footer-img" href="https:///www.twitter.com/lookgoodandwin" target="_none"><img class="footer-img" src="http://i58.tinypic.com/mrwuww.png"/></a>
+        <a class="footer-img" href="https://www.linkedin.com/in/dianpan" target="_none"><img class="footer-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
+        <a class="footer-img" href="mailto:dian.di.pan@gmail.com" target="_none"><img class="footer-img" src="http://i58.tinypic.com/3ugip.png"/></a>
+
+      </div><br>
+
+      <p id="copyright">Copyright 2015</p>
+
   </footer>
+
+
 
