--- a/menu.html
+++ b/menu.html
@@ -1,3 +1,6 @@
+  <link rel="stylesheet" type="text/css" href="default.css">
+  <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+
 <header>
     <table>
     <tr>
