--- a/blog:index.html
+++ b/blog:index.html
@@ -10,7 +10,7 @@
 
 <body>
   <section>
-    <h1 id="h1" class="headline-text">My Blogs</h1>
+    <h1 id="h1" class="headline-text">My Blog Posts</h1>
     <h2 class="headline-text">May 2015</h2>
     <p class="text">
       <a href="http://dianpan.github.io/blog/t2-css-design.html">a deeper look into CSS</a><br>
