--- a/index.html
+++ b/index.html
@@ -10,70 +10,35 @@
 <body>
 
 <header>
-    <table>
-    <tr>
-      <td>
-        <img id="headshot" src ="http://i57.tinypic.com/301hlq9.png"/>
-      </td>
+  <nav id="nav">
+    <img id="headshot" src ="http://i57.tinypic.com/301hlq9.png"/>
+    <a href="http://dianpan.github.io/#" target="_none" class="link">Home </a>
+    <a href="http://dianpan.github.io/blog:index.html" target="_none" class="link">Blog </a>
+    <a href="#" target="_none" class="link">Projects</a>
+  </nav>
 
-      <td class="header-spacing"></td>
-
-      <td class="nav">
-        <a href="http://dianpan.github.io/#" target="_none" class="link">
-          <span class="link-text">Home</span></a>
-      </td>
-
-
-      <td class="header-spacing"></td>
-
-      <td class="nav">
-        <a href="http://dianpan.github.io/blog:index.html" target="_none" class="link">
-          <span class="link-text">Blog</span></a>
-      </td>
-
-      <td class="header-spacing"></td>
-
-      <td class="nav">
-        <a href="#" target="_none" class="link">
-          <span class="link-text">Projects</span></a>
-      </td>
-
-      <td class="header-spacing"></td>
-
-      <td class="nav">
-        <a href="mailto:dian.di.pan@gmail.com" target="_none" class="link">
-          <span class="link-text">Contact</span></a>
-      </td>
-
-    <td class="nav">
-      <div id="social-header">
-        <a class="footer-img" href="https://github.com/dianpan/" target="_none"><img class="footer-img" src="http://i62.tinypic.com/be82o5.png"/></a>
-        <a class="footer-img" href="https:///www.twitter.com/lookgoodandwin" target="_none"><img class="footer-img" src="http://i58.tinypic.com/mrwuww.png"/></a>
-        <a class="footer-img" href="https://www.linkedin.com/in/dianpan" target="_none"><img class="footer-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
-        <a class="footer-img" href="mailto:dian.di.pan@gmail.com" target="_none"><img class="footer-img" src="http://i58.tinypic.com/3ugip.png"/></a>
-      </div>
-    </td>
-  </tr>
-
-      </table>
+  <aside id="social-header">
+    <a href="https://github.com/dianpan/" target="_none"><img class="header-img" src="http://i62.tinypic.com/be82o5.png"/></a>
+    <a href="https:///www.twitter.com/lookgoodandwin" target="_none"><img class="header-img" src="http://i58.tinypic.com/mrwuww.png"/></a>
+    <a href="https://www.linkedin.com/in/dianpan" target="_none"><img class="header-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
+    <a href="mailto:dian.di.pan@gmail.com" target="_none"><img class="header-img" src="http://i58.tinypic.com/3ugip.png"/></a>
+  </aside>
 
 </header>
 
-
-
   <section>
-    <h1>My DBC Blog</h1>
+    <h1 id="h1">My DBC Blog</h1>
     <p class="bio-text">
       A bit about me...
       Lijit groupon ning stypi eskobo blyve ning shopify oooooc, meebo groupon prezi ebay voxy bitly diigo. Spock ifttt skype hipmunk movity whrrl bebo oooj empressr, disqus insala palantir bitly dropio zimbra zinch oooooc etsy, klout spock insala quora omgpop trulia jibjab. Sifteo dogster ebay grockit geni scribd bitly ning unigo, plickers voki mzinga tumblr kaboodle mozy whrrl woopra udemy, foodzie joukuu elgg twitter shopify akismet rovio. Kosmix eduvant woopra dopplr balihoo ning bebo akismet, boxbe vimeo kosmix shopify zappos bitly geni loopt, qeyno disqus sococo squidoo wikia octopart.
     </p>
     <br><br>
 
-    <p>Blog Post placeholder</p><br>
+    <p>Tech Blog placeholder</p><br>
         <img id="blog-image" src="http://placehold.it/250x250"/></p>
+        <br><br>
 
-
-    <p>Blog Post placeholder</p>
+    <p>Culture Blog placeholder</p>
       <img id="blog-image" src="http://placehold.it/250x250"/></p>
 
   </section>
@@ -90,16 +55,12 @@
         <a class="footer-img" href="https://www.linkedin.com/in/dianpan" target="_none"><img class="footer-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
         <a class="footer-img" href="mailto:dian.di.pan@gmail.com" target="_none"><img class="footer-img" src="http://i58.tinypic.com/3ugip.png"/></a>
 
-      </div><br>
 
-      <p id="copyright">Copyright 2015</p>
+      <br><p id="copyright">Copyright 2015</p>
 
-<!--email: http://i58.tinypic.com/3ugip.png
-linkedin: http://i62.tinypic.com/j8pd0l.png
-twitter: http://i58.tinypic.com/mrwuww.png
-fb: http://i60.tinypic.com/2h88t1d.png
-instagram: http://i59.tinypic.com/mmv4hs.png
--->
+      </div>
+
+
   </footer>
 
 
