--- a/blog:index.html
+++ b/blog:index.html
@@ -5,40 +5,33 @@
   <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
   <title>My DBC Blog</title>
 
-
 </head>
 
 <body>
   <section>
     <h1 id="h1" class="headline-text">My Blog Posts</h1>
+    <h2 class="headline-text">June 2015</h2>
+    <p class="text">
+      <a href="http://dianpan.github.io/blog/t3-arrays-hashes.html">Week 3: Ruby data structures: arrays and hashes</a><br>
+      <a href="http://dianpan.github.io/blog/t4-enumerable-methods.html">Week 4: Ruby Enumerable Methods</a><br>
+      <a href="http://dianpan.github.io/blog/t5-ruby-classes.html">Week 5: Ruby Classes</a>
+      <a href="http://dianpan.github.io/blog/t6-oop-concepts.html">Week 6: Object Oriented Programming</a>
+    </p>
+
+    <br>
+
     <h2 class="headline-text">May 2015</h2>
     <p class="text">
-      <a href="http://dianpan.github.io/blog/t2-css-design.html">a deeper look into CSS</a><br>
-      <a href="http://dianpan.github.io/blog/c1-chefs-kitchen.html">restaurant vs chef mindset</a><br>
-      <a href="http://dianpan.github.io/blog/t1-git-blog.html">git, Github and the command line</a>
+      <a href="http://dianpan.github.io/blog/t2-css-design.html">Week 2: a deeper look into CSS</a><br>
+      <a href="http://dianpan.github.io/blog/c1-chefs-kitchen.html">Week 1: restaurant vs chef mindset</a><br>
+      <a href="http://dianpan.github.io/blog/t1-git-blog.html">Week 1: git, Github and the command line</a>
     </p>
 
   </section>
-    </body>
+</body>
 
 
-<footer>
-    <hr>
-    <br><br>
 
-    <div id="social-footer">
-
-        <a class="footer-img" href="https://github.com/dianpan/" target="_none"><img class="footer-img" src="http://i62.tinypic.com/be82o5.png"/></a>
-
-        <a class="footer-img" href="https:///www.twitter.com/lookgoodandwin" target="_none"><img class="footer-img" src="http://i58.tinypic.com/mrwuww.png"/></a>
-        <a class="footer-img" href="https://www.linkedin.com/in/dianpan" target="_none"><img class="footer-img" src="http://i62.tinypic.com/j8pd0l.png"/></a>
-        <a class="footer-img" href="mailto:dian.di.pan@gmail.com" target="_none"><img class="footer-img" src="http://i58.tinypic.com/3ugip.png"/></a>
-
-      </div><br>
-
-      <p id="copyright">Copyright 2015</p>
-
-  </footer>
 
 
 
