--- a/blog:index.html
+++ b/blog:index.html
@@ -10,18 +10,23 @@
 <body>
   <section>
     <h1 id="h1" class="headline-text">My Blog Posts</h1>
+
+<!--     <h2 class="headline-text">July 2015</h2>
+    <p class="blog-list">
+    </p> -->
+
     <h2 class="headline-text">June 2015</h2>
-    <p class="text">
-      <a href="http://dianpan.github.io/blog/t3-arrays-hashes.html">Week 3: Ruby data structures: arrays and hashes</a><br>
-      <a href="http://dianpan.github.io/blog/t4-enumerable-methods.html">Week 4: Ruby Enumerable Methods</a><br>
-      <a href="http://dianpan.github.io/blog/t5-ruby-classes.html">Week 5: Ruby Classes</a>
+    <p class="blog-list">
       <a href="http://dianpan.github.io/blog/t6-oop-concepts.html">Week 6: Object Oriented Programming</a>
+      <a href="http://dianpan.github.io/blog/t5-ruby-classes.html">Week 5: Ruby Classes</a><br>
+      <a href="http://dianpan.github.io/blog/t4-enumerable-methods.html">Week 4: Ruby Enumerable Methods</a><br>
+      <a href="http://dianpan.github.io/blog/t3-arrays-hashes.html">Week 3: Ruby data structures: arrays and hashes</a>
     </p>
 
     <br>
 
     <h2 class="headline-text">May 2015</h2>
-    <p class="text">
+    <p class="blog-list">
       <a href="http://dianpan.github.io/blog/t2-css-design.html">Week 2: a deeper look into CSS</a><br>
       <a href="http://dianpan.github.io/blog/c1-chefs-kitchen.html">Week 1: restaurant vs chef mindset</a><br>
       <a href="http://dianpan.github.io/blog/t1-git-blog.html">Week 1: git, Github and the command line</a>
