--- a/blog:index.html
+++ b/blog:index.html
@@ -17,7 +17,7 @@
 
     <h2 class="headline-text">June 2015</h2>
     <p class="blog-list">
-      <a href="http://dianpan.github.io/blog/t6-oop-concepts.html">Week 6: Object Oriented Programming</a>
+      <a href="http://dianpan.github.io/blog/t6-oop-concepts.html">Week 6: Object Oriented Programming</a><br>
       <a href="http://dianpan.github.io/blog/t5-ruby-classes.html">Week 5: Ruby Classes</a><br>
       <a href="http://dianpan.github.io/blog/t4-enumerable-methods.html">Week 4: Ruby Enumerable Methods</a><br>
       <a href="http://dianpan.github.io/blog/t3-arrays-hashes.html">Week 3: Ruby data structures: arrays and hashes</a>
