add refactored pages

--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     </p>
     <br><br>
 
-    <p>Tech Blog placeholder</p><br>
+<!--     <p>Tech Blog placeholder</p><br>
         <img id="blog-image" src="http://placehold.it/250x250"/></p>
         <br><br>
 
     <p>Culture Blog placeholder</p>
-      <img id="blog-image" src="http://placehold.it/250x250"/></p>
+      <img id="blog-image" src="http://placehold.it/250x250"/></p> -->
 
   </section>
 
