--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
           <div class="p-xxl bgc-bone debug">
             <h1>Welcome to my blog</h1>
-            <p>This blog page is a work in progress as I start my coding journey as a Boot in Dev Bootcamp's Firefly cohort... <br>meanwhile, grumpy cat says hello.</p>
+            <p>This blog will chronicle my coding journey as a Boot in Dev Bootcamp's Firefly cohort... <br>meanwhile, grumpy cat says "what're you lookin at?" aka "hello".</p>
           </div>
 
           <!-- gutters (coming from trg.css) is adding some padding between the columns-->
