add fix for blog post css

--- a/blog:index.html
+++ b/blog:index.html
@@ -18,9 +18,13 @@
     <h2 class="headline-text">June 2015</h2>
     <p class="blog-list">
       <a href="http://dianpan.github.io/blog/t6-oop-concepts.html">Week 6: Object Oriented Programming</a><br>
+      <a href="http://dianpan.github.io/blog/c6-stereotype-threat.html">Week 6: A personal take on stereotype threat</a><br>
       <a href="http://dianpan.github.io/blog/t5-ruby-classes.html">Week 5: Ruby Classes</a><br>
+      <a href="http://dianpan.github.io/blog/c5-feedback.html">Week 5: Giving and receiving feedback</a><br>
       <a href="http://dianpan.github.io/blog/t4-enumerable-methods.html">Week 4: Ruby Enumerable Methods</a><br>
+      <a href="http://dianpan.github.io/blog/c4-tech-issues.html">Week 4: Issues in tech</a><br>
       <a href="http://dianpan.github.io/blog/t3-arrays-hashes.html">Week 3: Ruby data structures: arrays and hashes</a>
+      <a href="http://dianpan.github.io/blog/c3-thinking-style.html">Week 3: My thinking style</a>
     </p>
 
     <br>
