--- a/blog:index.html
+++ b/blog:index.html
@@ -23,7 +23,7 @@
       <a href="http://dianpan.github.io/blog/c5-feedback.html">Week 5: Giving and receiving feedback</a><br>
       <a href="http://dianpan.github.io/blog/t4-enumerable-methods.html">Week 4: Ruby Enumerable Methods</a><br>
       <a href="http://dianpan.github.io/blog/c4-tech-issues.html">Week 4: Issues in tech</a><br>
-      <a href="http://dianpan.github.io/blog/t3-arrays-hashes.html">Week 3: Ruby data structures: arrays and hashes</a>
+      <a href="http://dianpan.github.io/blog/t3-arrays-hashes.html">Week 3: Ruby data structures: arrays and hashes</a><br>
       <a href="http://dianpan.github.io/blog/c3-thinking-style.html">Week 3: My thinking style</a>
     </p>
 
