--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
 
           <div class="p-xxl bgc-bone debug">
             <h1>Welcome to my blog</h1>
-            <p>This blog will chronicle my coding journey as a Boot in Dev Bootcamp's Firefly cohort... <br>meanwhile, grumpy cat says "what're you lookin at?" aka "hello".</p>
+            <p>
+              This blog will chronicle my coding journey as a shiny Boot in Dev Bootcamp's Firefly cohort.
+            </p>
+            <p>
+              And if you're asking yourself what Grumpy cat and coding have in common, I think that face says it all.
+            </p>
           </div>
 
           <!-- gutters (coming from trg.css) is adding some padding between the columns-->
