add about/resume page

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title></title>
+        <title>Resume</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
@@ -29,42 +29,24 @@
             <!--lis-n will get rid of the bullet points-->
             <ul class="fl-r lis-n clearfix debug">
               <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/blog:index.html" target="_none" class="link">BLOG&nbsp;&nbsp;</a>|</li>
-              <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/about.html" target="_none" class="link">&nbsp;&nbsp;ABOUT ME</a>&nbsp;&nbsp;|</li>
-              <li class="fl-l nav-name debug"><a href="#" target="_none" class="link">&nbsp;&nbsp;PROJECTS&nbsp;&nbsp;</a>|</li>
+              <li class="fl-l nav-name debug"><a href="#" target="_none" class="link">&nbsp;&nbsp;ABOUT ME</a>&nbsp;&nbsp;|</li>
+              <li class="fl-l nav-name debug"><a href="#" target="_none" class="link">&nbsp;&nbsp;PROJECTS</a>&nbsp;&nbsp;|</li>
               <li class="fl-l nav-name debug"><a href="mailto:dian.di.pan@gmail.com" target="_none" class="link">&nbsp;&nbsp;CONTACT</a></li>
             </ul>
           </header>
 
           <div class="p-xxl bgc-bone-light debug">
-            <h1>Welcome to my blog</h1>
-            <p>
-              This blog will chronicle my coding journey as a new Boot in Dev Bootcamp's Firefly cohort.<br>
-              If you're wondering what Grumpy Cat and coding have in common, the face should say it all.
-            </p>
-          </div>
+            <section>
+              <h1 class="clearfix fc-grey debug">About Me</h1>
+              <h2 class="clearfix fc-grey debug">June 2015</h2>
 
-          <!-- gutters (coming from trg.css) is adding some padding between the columns-->
-          <!-- <main role="main" class="container row gutters-t gutters-d debug">
-            class col is from trg.css; span-3-t is for tablet-->
-            <!-- <div class="col span-3-t debug">
-              left column
+              </section>
             </div>
-
-            <div class="col span-6-t debug">
-              middle column
-            </div>
-
-            <div class="col span-3-t debug">
-              right column
-            </div>
-
-          </main> -->
-
-        </div>
+      </body>
+    </html>
 
 
-        <!--removing JS for now
-        <script src="js/main.js"></script>
-        -->
-    </body>
-</html>
+
+
+
+
