--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h1 class="nav-name fl-l clearfix debug"><a href="http://dianpan.github.io/" class="link fs-l debug">Dian Pan</a></h1>
             <!--lis-n will get rid of the bullet points-->
             <ul class="fl-r lis-n clearfix debug">
-              <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/blog:index.html" target="_none" class="link">BLOG&nbsp;&nbsp;</a>|</li>
+              <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/blog:index.html" class="link">BLOG&nbsp;&nbsp;</a>|</li>
               <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/about.html" target="_none" class="link">&nbsp;&nbsp;ABOUT ME</a>&nbsp;&nbsp;|</li>
               <li class="fl-l nav-name debug"><a href="#" target="_none" class="link">&nbsp;&nbsp;PROJECTS&nbsp;&nbsp;</a>|</li>
               <li class="fl-l nav-name debug"><a href="mailto:dian.di.pan@gmail.com" target="_none" class="link">&nbsp;&nbsp;CONTACT</a></li>
