--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <![endif]-->
         <div class="debug">
           <header class = "container clearfix debug">
-            <h1 class="nav-name fl-l clearfix debug"><a href="http://dianpan.github.io/" class="link fs-l debug">Dian Pan</a></h1>
+            <!-- <h1 class="nav-name fl-l clearfix debug"><a href="http://dianpan.github.io/" class="link fs-l debug">Dian Pan</a></h1> -->
             <!--lis-n will get rid of the bullet points-->
             <ul class="fl-r lis-n clearfix debug">
               <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/blog:index.html" class="link">BLOG&nbsp;&nbsp;</a>|</li>
@@ -36,10 +36,9 @@
           </header>
 
           <div class="p-xxl bgc-bone-light debug">
-            <h1>Welcome to my blog</h1>
+            <h1>Dian Pan</h1>
             <p>
-              This blog will chronicle my coding journey as a new Boot in Dev Bootcamp's Firefly cohort.<br>
-              If you're wondering what Grumpy Cat and coding have in common, the face should say it all.
+              A blog covering my 2 loves - coding and travel... oh and grumpy cat.<br>
             </p>
           </div>
 
