add cheat sheet

--- a/index.html
+++ b/index.html
@@ -28,17 +28,22 @@
             <!-- <h1 class="nav-name fl-l clearfix debug"><a href="http://dianpan.github.io/" class="link fs-l debug">Dian Pan</a></h1> -->
             <!--lis-n will get rid of the bullet points-->
             <ul class="fl-r lis-n clearfix debug">
-              <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/blog:index.html" class="link">BLOG&nbsp;&nbsp;</a>|</li>
-              <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/about.html" target="_none" class="link">&nbsp;&nbsp;ABOUT ME</a>&nbsp;&nbsp;|</li>
-              <li class="fl-l nav-name debug"><a href="#" target="_none" class="link">&nbsp;&nbsp;PROJECTS&nbsp;&nbsp;</a>|</li>
-              <li class="fl-l nav-name debug"><a href="mailto:dian.di.pan@gmail.com" target="_none" class="link">&nbsp;&nbsp;CONTACT</a></li>
+              <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/blog:index.html" class="link">Blog&nbsp;&nbsp;</a>|</li>
+              <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/about.html" target="_none" class="link">&nbsp;&nbsp;About Me</a>&nbsp;&nbsp;|</li>
+              <li class="fl-l nav-name debug"><a href="#" target="_none" class="link">&nbsp;&nbsp;Projects&nbsp;&nbsp;</a>|
+              </li>
+
+              </li>
+              <li class="fl-l nav-name debug"><a href="http://dianpan.github.io/cheat-sheet.html" target="_none" class="link">&nbsp;&nbsp;Cheat Sheet</a>&nbsp;&nbsp;|</li>
+
+              <li class="fl-l nav-name debug"><a href="mailto:dian.di.pan@gmail.com" target="_none" class="link">&nbsp;&nbsp;Contact</a></li>
             </ul>
           </header>
 
           <div class="p-xxl bgc-bone-light debug">
-            <h1>Dian Pan</h1>
+            <h1 class="titlef">Dian Pan</h1>
             <p>
-              A blog covering my 2 loves - coding and travel... oh and grumpy cat.<br>
+              A fun little blog about code, food, travel and grumpy animals.<br>
             </p>
           </div>
 
