--- a/index.html
+++ b/index.html
@@ -4,18 +4,17 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Dian Pan</title>
-    <link name="author" href="humans.txt" />
     <meta name="description" content="Dian Pan, Fullstack Developer">
 
     <!-- Favicons -->
-    <link rel="shortcut icon" href="img/favicons/favicon.ico">
+    <link rel="shortcut icon" href="img/favicon.ico">
 
     <!-- Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <!-- CSS -->
     <link rel="stylesheet" href="css/normalize.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <!-- Fonts -->
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,700'>
@@ -236,7 +235,7 @@
         <footer id="footer" class="row">
             <div class="footer-content page">
                 <div class="col f1">
-                    <p>© 2015</p>
+                    <p>© 2015 Dian Pan</p>
                 </div>
             </div>
         </footer>
