--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Dian Pan, Fullstack Developer">
 
     <!-- Favicons -->
-    <link rel="shortcut icon" href="img/favicon.ico">
+    <link rel="shortcut icon" href="imgs/favicon.ico">
 
     <!-- Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -30,7 +30,8 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About me</a></li>
-                    <li><a href="#work">My Works</a></li>
+                    <li><a href="#work">Projects</a></li>
+                    <li><a href="http://dianpan.github.io/blog/">Blog</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -59,7 +60,7 @@
                     <p
                         data-100="opacity:0;"
                         data-500="opacity:1;"
-                    >I'm a </p>
+                    >Curious, creative, life-longer learner. 3 months ago, I quit my job in marketing to pursue coding through Dev Bootcamp and I haven't looked back since. Check out my blog for more information on my journey so far.</p>
                     <a href="mailto:dian.di.pan@gmail.com" class="but">Get in touch</a>
                 </div>
                 <div class="col empty">&nbsp;</div>
@@ -74,12 +75,9 @@
                 >
                     <span class="icon-design"></span>
                     <ul>
-                        <li>UI / UX Design</li>
-                        <li>User Interface Design</li>
-                        <li>Interaction Design</li>
-                        <li>User Experience Thinking</li>
-                        <li>Prototyping</li>
-                        <li>Wireframing</li>
+                        <li>Backend</li>
+                        <li>Ruby</li>
+                        <li>Rails</li>
                     </ul>
                 </div>
                 <div class="col services-frontend"
@@ -88,12 +86,13 @@
                 >
                     <span class="icon-computer"></span>
                     <ul>
-                        <li>Frontend Development</li>
+                        <li>Frontend</li>
                         <li>HTML5 / CSS3</li>
                         <li>jQuery & JavaScript libraries</li>
                         <li>Responsive Design</li>
                         <li>Sass</li>
-                        <li>Git / SVN</li>
+                        <li>Foundation</li>
+                        <li>Git</li>
                     </ul>
                 </div>
                 <div class="col services-team"
@@ -102,12 +101,9 @@
                 >
                     <span class="icon-music"></span>
                     <ul>
-                        <li>Team Building</li>
-                        <li>Smiling</li>
-                        <li>Comunication</li>
-                        <li>Team working</li>
-                        <li>Sharing my music</li>
-                        <li>...and more!</li>
+                        <li>Testing</li>
+                        <li>TDD</li>
+                        <li>Continuous Integration</li>
                     </ul>
                 </div>
             </div>
@@ -121,14 +117,14 @@
                     <h3
                         data-900="-webkit-transform: translateX(-100px); opacity:0;"
                         data-1300="-webkit-transform: translateX(0px); opacity:1;"
-                    >My works</h3>
+                    >Projects</h3>
                 </div>
                 <div class="col empty">&nbsp;</div>
                 <div class="col work-description">
                     <p
                         data-900="opacity:0;"
                         data-1300="opacity:1;"
-                    >A selection of recent projects I've been working on</p>
+                    >My recent projects</p>
                 </div>
                 <div class="col empty">&nbsp;</div>
             </div>
@@ -137,74 +133,45 @@
                     data-1300="opacity:0;"
                     data-1400="opacity:1;"
                 >
-                    <img src="img/works/alexcerezo.jpg" alt="">
+                    <img src="imgs/caniaffordthis-homepage.png" alt="">
                     <div class="work-item-inside">
                         <div class="work-item-inside-content">
-                            <h4>Alex Cerezo Web</h4>
-                            <a href="http://alexcerezo.com/" class="but">You are here ;)</a>
+                            <h4>Can I Afford This</h4>
+                            <a href="https://github.com/dianpan/Can-I-Afford-This" class="">Github</a><br>
+                            <a href="http://caniaffordthis.herokuapp.com/" class="but">Visit</a>
                         </div>
                     </div>
                 </div>
-                <div class="col work-item"
-                    data-1300="opacity:0;"
-                    data-1400="opacity:1;"
-                >
-                    <img src="img/works/totalchannel.jpg" alt="">
-                    <div class="work-item-inside">
-                        <div class="work-item-inside-content">
-                            <h4>Can I  Afford This</h4>
-                            <a href="mailto:hello@alexcerezo.com" class="but">Visit</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col work-item"
+
+
+<!--                 <div class="col work-item"
                     data-1300="opacity:0;"
                     data-1600="opacity:1;"
                 >
-                    <img src="img/works/abaenglish.jpg" alt="">
+                    <img src="imgs/caniaffordthis-homepage.png" alt="">
                     <div class="work-item-inside">
                         <div class="work-item-inside-content">
                             <h4>Aba English website</h4>
-                            <a href="http://www.abaenglish.com/es/" target="_blank" class="but">Visit it</a>
+                            <a href="http://www.abaenglish.com/es/" target="_blank" class="but">Visit</a>
                         </div>
                     </div>
-                </div>
-                <div class="col work-item"
-                    data-1300="opacity:0;"
-                    data-1400="opacity:1;"
-                >
-                    <img src="img/works/ecomm.jpg" alt="">
-                    <div class="work-item-inside">
-                        <div class="work-item-inside-content">
-                            <h4>Ecommtech Barcelona</h4>
-                            <a href="http://www.ecommercetechbcn.com/" target="_blank" class="but">Visit it</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col work-item"
-                    data-1300="opacity:0;"
-                    data-1500="opacity:1;"
-                >
-                    <img src="img/works/pepe.jpg" alt="">
-                    <div class="work-item-inside">
-                        <div class="work-item-inside-content">
-                            <h4>Pepe Jeans Email Marketing</h4>
-                            <a href="mailto:hello@alexcerezo.com" class="but">Contact me to see this one</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col work-item"
+                </div> -->
+
+
+
+<!--                 <div class="col work-item"
                     data-1300="opacity:0;"
                     data-1600="opacity:1;"
                 >
-                    <img src="img/works/taster.jpg" alt="">
+                    <img src="imgs/caniaffordthis-homepage.png" alt="">
                     <div class="work-item-inside">
                         <div class="work-item-inside-content">
                             <h4>Taster&Co</h4>
                             <p class="off">Not available</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
+
             </div>
         </section>
 
@@ -224,10 +191,9 @@
                 </div>
                 <div class="col empty">&nbsp;</div>
                 <div class="col span_12 social">
-                    <a class="icon-twitter" href="https://twitter.com/tekymonkey" target="_blank"></a>
-                    <a class="icon-github" href="https://github.com/tekymonkey" target="_blank"></a>
-                    <a class="icon-instagram" href="http://instagram.com/tekymonkey" target="_blank"></a>
-                    <a class="icon-linkedin" href="https://www.linkedin.com/in/alexcerezo" target="_blank"></a>
+                    <a class="icon-github" href="https://github.com/dianpan" target="_blank"></a>
+                    <a class="icon-twitter" href="https://twitter.com/lookgoodandwin" target="_blank"></a>
+                    <a class="icon-linkedin" href="https://www.linkedin.com/in/dianpan" target="_blank"></a>
                 </div>
             </div>
         </section>
