add background image

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col home-title jiji">
                     <h1>Dian Pan</h1>
                     <h2>Full Stack Developer</h2>
-                    <a href="" target="_blank" class="but">Resume</a>
+                    <!-- <a href="" target="_blank" class="but">Resume</a> -->
                 </div>
             </div>
         </section>
