--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <header>
+        <!-- <header>
             <a class="menu-icon jiji">
                 <span></span>
             </a>
@@ -35,7 +35,17 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
+        </header> -->
+        <header>
+            <nav class="site-nav">
+                  <a href="#home">Home</a>
+                    <a href="#about">About</a>
+                    <a href="#work">Projects</a>
+                    <a href="http://dianpan.github.io/blog/">Blog</a>
+                    <a href="#contact">Contact</a>
+            </nav>
         </header>
+
 
         <section id="home" class="row">
             <div class="overlay">
@@ -209,11 +219,10 @@
     </div>
 
     <div class="loader"></div>
-
     <!-- JavaScript -->
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/modernizr-2.6.2.min.js"></script>
-    <script src="js/skrollr.js"></script>
+    <!-- <script src="js/skrollr.js"></script> -->
     <script src="js/main.js"></script>
 
 </body>
