update skills section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Dian Pan</title>
-    <meta name="description" content="Dian Pan, Fullstack Developer">
+    <meta name="description" content="Dian Pan, Full Stack Developer">
 
     <!-- Favicons -->
     <link rel="shortcut icon" href="imgs/favicon.ico">
@@ -46,7 +46,6 @@
             </nav>
         </header>
 
-
         <section id="home" class="row">
             <div class="overlay">
                 <div class="col home-title jiji">
@@ -70,8 +69,8 @@
                     <p
                         data-100="opacity:0;"
                         data-500="opacity:1;"
-                    >Curious, creative, life-longer learner. 3 months ago, I quit my job in marketing to pursue coding through Dev Bootcamp and I haven't looked back since. Check out my blog for more information on my journey so far.</p>
-                    <a href="mailto:dian.di.pan@gmail.com" class="but">Get in touch</a>
+                    >Curious, creative, life-long learner.  3 months ago, I quit my job to pursue coding full time and I haven't looked back since. Check out my <a href="http://dianpan.github.io/blog/">blog</a> to see how I transitioned from marketing to full stack developement.</p>
+                    <a href="mailto:dian.di.pan@gmail.com" class="but">Say hello</a>
                 </div>
                 <div class="col empty">&nbsp;</div>
             </div>
@@ -85,9 +84,11 @@
                 >
                     <span class="icon-design"></span>
                     <ul>
-                        <li>Backend</li>
+                        <li>Languages</li>
                         <li>Ruby</li>
-                        <li>Rails</li>
+                        <li>Javascript</li>
+                        <li>HTML5/CSS3</li>
+                        <li>SQL</li>
                     </ul>
                 </div>
                 <div class="col services-frontend"
@@ -96,13 +97,11 @@
                 >
                     <span class="icon-computer"></span>
                     <ul>
-                        <li>Frontend</li>
-                        <li>HTML5 / CSS3</li>
-                        <li>jQuery & JavaScript libraries</li>
-                        <li>Responsive Design</li>
+                        <li>Frameworks</li>
+                        <li>Ruby on Rails</li>
+                        <li>Sinatra</li>
                         <li>Sass</li>
                         <li>Foundation</li>
-                        <li>Git</li>
                     </ul>
                 </div>
                 <div class="col services-team"
@@ -111,9 +110,13 @@
                 >
                     <span class="icon-music"></span>
                     <ul>
-                        <li>Testing</li>
+                        <li>Concepts/Testing</li>
+                        <li>Object Oriented Programming</li>
+                        <li>REST</li>
                         <li>TDD</li>
                         <li>Continuous Integration</li>
+                        <li>RSpec</li>
+                        <li>Capybara</li>
                     </ul>
                 </div>
             </div>
@@ -152,22 +155,6 @@
                         </div>
                     </div>
                 </div>
-
-
-<!--                 <div class="col work-item"
-                    data-1300="opacity:0;"
-                    data-1600="opacity:1;"
-                >
-                    <img src="imgs/caniaffordthis-homepage.png" alt="">
-                    <div class="work-item-inside">
-                        <div class="work-item-inside-content">
-                            <h4>Aba English website</h4>
-                            <a href="http://www.abaenglish.com/es/" target="_blank" class="but">Visit</a>
-                        </div>
-                    </div>
-                </div> -->
-
-
 
 <!--                 <div class="col work-item"
                     data-1300="opacity:0;"
