--- a/index.html
+++ b/index.html
@@ -38,11 +38,13 @@
         </header> -->
         <header>
             <nav class="site-nav">
-                  <a href="#home">Home</a>
-                    <a href="#about">About</a>
-                    <a href="#work">Projects</a>
-                    <a href="http://dianpan.github.io/blog/">Blog</a>
-                    <a href="#contact">Contact</a>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#work">Projects</a></li>
+                    <li><a href="http://dianpan.github.io/blog/">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
             </nav>
         </header>
 
@@ -51,7 +53,7 @@
                 <div class="col home-title jiji">
                     <h1>Dian Pan</h1>
                     <h2>Full Stack Developer</h2>
-                    <!-- <a href="" target="_blank" class="but">Resume</a> -->
+                    <a href="" target="_blank" class="but">My Resume</a>
                 </div>
             </div>
         </section>
@@ -69,7 +71,7 @@
                     <p
                         data-100="opacity:0;"
                         data-500="opacity:1;"
-                    >Curious, creative, life-long learner.  3 months ago, I quit my job to pursue coding full time and I haven't looked back since. Check out my <a href="http://dianpan.github.io/blog/">blog</a> to see how I transitioned from marketing to full stack developement.</p>
+                    >Curious, creative, life-long learner. 3 months ago, I quit my job to pursue coding full time and I haven't looked back since. Check out my <a href="http://dianpan.github.io/blog/">blog</a> to see how I transitioned from marketing to full stack developement.</p>
                     <a href="mailto:dian.di.pan@gmail.com" class="but">Say hello</a>
                 </div>
                 <div class="col empty">&nbsp;</div>
