--- a/index.html
+++ b/index.html
@@ -1,59 +1,41 @@
 <head>
-
-    <!-- Basics -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>Dian Pan</title>
     <meta name="description" content="Dian Pan, Full Stack Developer">
 
-    <!-- Favicons -->
     <link rel="shortcut icon" href="imgs/favicon.ico">
 
     <!-- Mobile -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="css/normalize.min.css">
+    <!-- <link rel="stylesheet" href="css/normalize.min.css"> -->
     <link rel="stylesheet" href="css/index.css">
-
-    <!-- Fonts -->
+    <link rel="stylesheet" href="css/nav.css">
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Lato:300,400,700'>
 
 </head>
 <body>
     <div class="wrapper">
-        <!-- <header>
-            <a class="menu-icon jiji">
-                <span></span>
-            </a>
-            <nav class="menu visuallyhidden">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About me</a></li>
-                    <li><a href="#work">Projects</a></li>
-                    <li><a href="http://dianpan.github.io/blog/">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </header> -->
-        <header>
-            <nav class="site-nav">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#work">Projects</a></li>
-                    <li><a href="http://dianpan.github.io/blog/">Blog</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+        <!-- start header   -->
+        <header class="main-header">
+            <ul class="nav">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#work">Projects</a></li>
+                <li><a href="http://dianpan.github.io/blog/">Blog</a></li>
+                <li><a href="http://dianpan.github.io/blog/">Resume</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
         </header>
+        <!-- end header -->
 
         <section id="home" class="row">
             <div class="overlay">
                 <div class="col home-title jiji">
                     <h1>Dian Pan</h1>
                     <h2>Full Stack Developer</h2>
-                    <a href="" target="_blank" class="but">My Resume</a>
+                    <a href="https://resume.creddle.io/resume/i9083pnrrl3" target="_blank" class="but">My Resume</a>
                 </div>
             </div>
         </section>
@@ -84,7 +66,6 @@
                     data-600="-webkit-transform: translateY(10px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
-                    <span class="icon-design"></span>
                     <ul>
                         <li>Languages</li>
                         <li>Ruby</li>
@@ -97,7 +78,6 @@
                     data-600="-webkit-transform: translateY(50px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
-                    <span class="icon-computer"></span>
                     <ul>
                         <li>Frameworks</li>
                         <li>Ruby on Rails</li>
@@ -110,7 +90,6 @@
                     data-600="-webkit-transform: translateY(100px); opacity:0;"
                     data-800="-webkit-transform: translateY(0px); opacity:1;"
                 >
-                    <span class="icon-music"></span>
                     <ul>
                         <li>Concepts/Testing</li>
                         <li>Object Oriented Programming</li>
@@ -152,7 +131,8 @@
                     <div class="work-item-inside">
                         <div class="work-item-inside-content">
                             <h4>Can I Afford This</h4>
-                            <a href="https://github.com/dianpan/Can-I-Afford-This" class="">Github</a><br>
+                            <p><a href="https://github.com/dianpan/Can-I-Afford-This" class="">Github</a></p>
+                            <br>
                             <a href="http://caniaffordthis.herokuapp.com/" class="but">Visit</a>
                         </div>
                     </div>
@@ -208,10 +188,9 @@
     </div>
 
     <div class="loader"></div>
-    <!-- JavaScript -->
     <script src="js/jquery-1.11.0.min.js"></script>
     <script src="js/modernizr-2.6.2.min.js"></script>
-    <!-- <script src="js/skrollr.js"></script> -->
+    <script src="js/skrollr.js"></script>
     <script src="js/main.js"></script>
 
 </body>
